cfn/alb.yaml
AWSTemplateFormatVersion: '2010-09-09'

Parameters:
  ClusterName:
    Description: EKS cluster name
    Type: String
  VpcId:
    Description: VPC id
    Type: String
  PublicSubnet01:
    Description: First public subnet
    Type: String
  PublicSubnet02:
    Description: Second public subnet
    Type: String
  BlueTargetGroupWeight:
    Description: Weight to route blue target group
    Type: String
    Default: 100
  GreenTargetGroupWeight:
    Description: Weight to route Green target group
    Type: String
    Default: 0
Resources:
  ALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub ${ClusterName}-alb-sg
      GroupDescription: !Sub ${ClusterName}-alb-sg
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: "0.0.0.0/0"
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          CidrIp: "0.0.0.0/0"
      Tags:
        - Key: Name
          Value: !Sub ${ClusterName}-alb-sg
  InternetALB:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: !Sub ${ClusterName}-alb
      Type: application
      IpAddressType: ipv4
      Scheme: internet-facing
      SecurityGroups:
        - !Ref ALBSecurityGroup
      Subnets:
        - !Ref PublicSubnet01
        - !Ref PublicSubnet02
  ALBListenerHTTP:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      Port: 80
      Protocol: HTTP
      DefaultActions:
        - Type: fixed-response
          FixedResponseConfig:
            ContentType: text/plain
            StatusCode: "404"
      LoadBalancerArn: !Ref InternetALB
  ALBListenerTestHTTP:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      Port: 8080
      Protocol: HTTP
      DefaultActions:
        - Type: fixed-response
          FixedResponseConfig:
            ContentType: text/plain
            StatusCode: "404"
      LoadBalancerArn: !Ref InternetALB
  ALBListenerHTTPRule:
    Type: AWS::ElasticLoadBalancingV2::ListenerRule
    Properties:
      Actions:
        - Type: forward
          ForwardConfig:
            TargetGroups:
              - TargetGroupArn: !Ref ALBTargetGroupBlue
                Weight: !Ref BlueTargetGroupWeight
              - TargetGroupArn: !Ref ALBTargetGroupGreen
                Weight: !Ref GreenTargetGroupWeight
      Conditions:
        - Field: path-pattern
          PathPatternConfig:
            Values:
              - "/*"
      ListenerArn: !Ref ALBListenerHTTP
      Priority: 1
  ALBListenerTestHTTPRule:
    Type: AWS::ElasticLoadBalancingV2::ListenerRule
    Properties:
      Actions:
        - Type: forward
          ForwardConfig:
            TargetGroups:
              - TargetGroupArn: !Ref ALBTargetGroupGreen
                Weight: 1
      Conditions:
        - Field: path-pattern
          PathPatternConfig:
            Values:
              - "/*"
      ListenerArn: !Ref ALBListenerTestHTTP
      Priority: 1
  ALBTargetGroupBlue:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      VpcId: !Ref VpcId
      Name: !Sub ${ClusterName}-blue-tg
      TargetType: ip
      Protocol: HTTP
      Port: 80
      HealthCheckProtocol: HTTP
      HealthCheckPath: "/"
      HealthCheckPort: "traffic-port"
      HealthyThresholdCount: 2
      UnhealthyThresholdCount: 2
      HealthCheckTimeoutSeconds: 5
      HealthCheckIntervalSeconds: 15
      Matcher:
        HttpCode: "200"
  ALBTargetGroupGreen:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      VpcId: !Ref VpcId
      Name: !Sub ${ClusterName}-green-tg
      TargetType: ip
      Protocol: HTTP
      Port: 80
      HealthCheckProtocol: HTTP
      HealthCheckPath: "/"
      HealthCheckPort: "traffic-port"
      HealthyThresholdCount: 2
      UnhealthyThresholdCount: 2
      HealthCheckTimeoutSeconds: 5
      HealthCheckIntervalSeconds: 15
      Matcher:
        HttpCode: "200"
